tilt/envoy/envoy.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 5000
static_resources:
  listeners:
    - name: frontend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: newsletter-dev
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /api/
                          route:
                            cluster: api_service
                        - match:
                            prefix: /stylesheets/
                          route:
                            cluster: api_service
                        - match:
                            prefix: /nl/
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /signin
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /signin.html
                        - match:
                            prefix: /grantaccess
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /settings
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /integrations
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /highlights
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /supported-newsletters
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /admin
                          route:
                            cluster: frontend
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /
                        - match:
                            prefix: /mailgun/
                          route:
                            cluster: mailgunserver
                            prefix_rewrite: /
                        - match:
                            prefix: /
                          route:
                            cluster: frontend
  clusters:
    - name: api_service
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: api_service_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: tilt-apiserver
                      port_value: 8001
    - name: frontend
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: frontend_1
        endpoints:
          - lb_endpoints:
              endpoint:
                address:
                  socket_address:
                    address: tilt-frontend
                    port_value: 8002
    - name: mailgunserver
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: mailgunserver_1
        endpoints:
          - lb_endpoints:
              endpoint:
                address:
                  socket_address:
                    address: tilt-mailgunserver
                    port_value: 8004
